[gd_scene load_steps=11 format=3 uid="uid://cb8vqv6l8psj8"]

[ext_resource type="Script" path="res://RESOURCES/MAIN/Main_SCRIPT.gd" id="1_x4mmc"]
[ext_resource type="Theme" uid="uid://dm2ug4t4xvo6c" path="res://RESOURCES/Scenes/UI/Juicy_THEME.tres" id="2_0eg1q"]
[ext_resource type="PackedScene" uid="uid://sxdcx0oleo14" path="res://RESOURCES/Scenes/UI/Buttons/Button_SCENE.tscn" id="3_eb66t"]
[ext_resource type="Texture2D" uid="uid://irpxtcvjo2ji" path="res://RESOURCES/Scenes/UI/Textures/Line_Mode_SPRITE.png" id="4_udib4"]
[ext_resource type="Texture2D" uid="uid://bmu5q2vw43oil" path="res://RESOURCES/Scenes/UI/Textures/Hide_Items_SPRITE.png" id="5_535b2"]
[ext_resource type="Texture2D" uid="uid://hn7b70828uv4" path="res://RESOURCES/Scenes/UI/Textures/Delete_Group_TEXTURE.png" id="6_dmt7c"]
[ext_resource type="PackedScene" uid="uid://dnw3bypjqd8rm" path="res://RESOURCES/Scenes/UI/Buttons/Dropdown_SCENE.tscn" id="6_rsv1e"]
[ext_resource type="Texture2D" uid="uid://0vby2xh4lrbf" path="res://RESOURCES/Scenes/UI/Textures/Swap_Edit_TEXTURE.png" id="7_0ncxd"]
[ext_resource type="Texture2D" uid="uid://dg8ocgg2c54kj" path="res://RESOURCES/Scenes/UI/Textures/New_Group_TEXTURE.png" id="9_exmt8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyquw"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.686275)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Main" type="Node2D"]
script = ExtResource("1_x4mmc")

[node name="Backgrounds" type="Node2D" parent="."]
z_index = -4096
z_as_relative = false

[node name="Items" type="Node2D" parent="."]
z_index = -4096
z_as_relative = false

[node name="Control_LAYER" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Control_LAYER"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0eg1q")

[node name="Info_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 1

[node name="Scroll_CONTAINER" type="ScrollContainer" parent="Control_LAYER/Control/Info_PANEL"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.176
anchor_right = 1.0
anchor_bottom = 0.861
offset_left = -177.0
offset_top = -0.0400085
offset_right = -5.0
offset_bottom = 0.059967
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fyquw")

[node name="V_Box_CONTAINER" type="VBoxContainer" parent="Control_LAYER/Control/Info_PANEL/Scroll_CONTAINER"]
layout_mode = 2
alignment = 1

[node name="Ball_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -182.0
offset_bottom = 100.0
grow_horizontal = 2
focus_mode = 1

[node name="Swap_Edit_BUTTON" parent="Control_LAYER/Control/Ball_PANEL" instance=ExtResource("3_eb66t")]
custom_minimum_size = Vector2(95, 85)
layout_mode = 2
anchor_top = -0.05
offset_left = 10.0
offset_top = 14.95
offset_right = 105.0
offset_bottom = 95.0
tooltip_text = "Swap between editing goo and items"
toggle_mode = true
icon = ExtResource("7_0ncxd")

[node name="Scroll_CONTAINER" type="ScrollContainer" parent="Control_LAYER/Control/Ball_PANEL"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.154
anchor_right = 0.992
offset_left = 0.187988
offset_top = 5.0
offset_right = 0.223938
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(410, 168)

[node name="H_Box_CONTAINER" type="HBoxContainer" parent="Control_LAYER/Control/Ball_PANEL/Scroll_CONTAINER"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Save_BUTTON" type="Button" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.999998
anchor_top = 1.01852
anchor_right = 0.999998
anchor_bottom = 1.01852
offset_left = -85.9999
offset_top = -70.0
offset_right = -19.9999
offset_bottom = -20.0
tooltip_text = "Save the level to the same path it was opened at"
focus_mode = 1
text = "SAVE"
metadata/_edit_use_anchors_ = true

[node name="Load_BUTTON" type="Button" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.994792
anchor_top = 1.01852
anchor_right = 0.994792
anchor_bottom = 1.01852
offset_left = -162.0
offset_top = -70.0
offset_right = -96.0
offset_bottom = -20.0002
tooltip_text = "Load a different project"
focus_mode = 1
text = "LOAD"
metadata/_edit_use_anchors_ = true

[node name="Tool_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 100.0
offset_right = 153.0
grow_vertical = 2
focus_mode = 1

[node name="Toolbar_CONTAINER" type="VBoxContainer" parent="Control_LAYER/Control/Tool_PANEL"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = -135.0
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Line_BUTTON" parent="Control_LAYER/Control/Tool_PANEL/Toolbar_CONTAINER" instance=ExtResource("3_eb66t")]
layout_mode = 2
tooltip_text = "Toggle line mode"
toggle_mode = true
icon = ExtResource("4_udib4")

[node name="Hide_BUTTON" parent="Control_LAYER/Control/Tool_PANEL/Toolbar_CONTAINER" instance=ExtResource("3_eb66t")]
layout_mode = 2
tooltip_text = "Toggle visuals"
toggle_mode = true
icon = ExtResource("5_535b2")

[node name="Terrain_Groups_DROPDOWN" parent="Control_LAYER/Control/Tool_PANEL" instance=ExtResource("6_rsv1e")]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -75.0
offset_right = 140.0
offset_bottom = -10.0
tooltip_text = "Terrain group dropdown"
alignment = 1
icon_alignment = 1
expand_icon = false
selected = 0
item_count = 1
popup/item_0/text = "Show all"

[node name="Delete_Group_BUTTON" type="Button" parent="Control_LAYER/Control/Tool_PANEL"]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -145.0
offset_right = 68.0
offset_bottom = -85.0
tooltip_text = "Delete the current terrain group and all terrain balls inside"
focus_mode = 1
icon = ExtResource("6_dmt7c")
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Add_Group_BUTTON" type="Button" parent="Control_LAYER/Control/Tool_PANEL"]
visible = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = -145.0
offset_right = 138.0
offset_bottom = -85.0
tooltip_text = "Create a new terrain group"
focus_mode = 1
icon = ExtResource("9_exmt8")
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Logo_LABEL" type="Label" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 9.0
offset_right = -16.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Level Juicer V4.8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name_LABEL" type="Label" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = 42.0
offset_right = -18.0
offset_bottom = 85.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="Action_LABEL" type="Label" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -273.0
offset_top = -34.0
offset_right = -202.0
offset_bottom = -10.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Error output"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Focus_Stealer" type="Control" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 153.0
offset_top = 99.0
offset_right = -182.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Level_FILE" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(700, 400)
theme = ExtResource("2_0eg1q")
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Load_POPUP" type="PopupMenu" parent="."]
title = "Any unsaved changes will be lost! Continue?"
initial_position = 1
size = Vector2i(600, 79)
unresizable = false
borderless = false
content_scale_mode = 1
content_scale_aspect = 4
theme = ExtResource("2_0eg1q")
hide_on_item_selection = false
hide_on_checkable_item_selection = false
item_count = 2
item_0/text = "Yeah!"
item_1/text = "Nah!"
item_1/id = 1

[node name="Game_FILE" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(700, 400)
theme = ExtResource("2_0eg1q")
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="Control_LAYER/Control/Ball_PANEL/Swap_Edit_BUTTON" to="." method="_edit_mode_swapped"]
[connection signal="pressed" from="Control_LAYER/Control/Save_BUTTON" to="." method="_Save_Pressed"]
[connection signal="pressed" from="Control_LAYER/Control/Load_BUTTON" to="." method="_load_pressed"]
[connection signal="pressed" from="Control_LAYER/Control/Tool_PANEL/Toolbar_CONTAINER/Line_BUTTON" to="." method="_line_mode_pressed"]
[connection signal="pressed" from="Control_LAYER/Control/Tool_PANEL/Toolbar_CONTAINER/Hide_BUTTON" to="." method="_hide_mode_pressed"]
[connection signal="item_selected" from="Control_LAYER/Control/Tool_PANEL/Terrain_Groups_DROPDOWN" to="." method="_terrain_group_selected"]
[connection signal="canceled" from="Level_FILE" to="." method="_file_select_canceled"]
[connection signal="file_selected" from="Level_FILE" to="." method="_Level_Selected"]
[connection signal="index_pressed" from="Load_POPUP" to="." method="_popup_index_pressed"]
[connection signal="canceled" from="Game_FILE" to="." method="_file_select_canceled"]
[connection signal="file_selected" from="Game_FILE" to="." method="_Game_Selected"]
